Make generateTeams create even teams and logical reordering of functions

--- a/.jscsrc
+++ b/.jscsrc
@@ -35,7 +35,7 @@
   "disallowMixedSpacesAndTabs": true,
   "disallowYodaConditions": true,
   "requireCamelCaseOrUpperCaseIdentifiers": true,
-  "requireCapitalizedComments": true,
+  "requireCapitalizedComments": false,
   "requireDollarBeforejQueryAssignment": true,
   "requireDotNotation": true,
   "requireLineBreakAfterVariableAssignment": true,
