--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/TimHandy/football-manager#readme",
   "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "webpack": "^1.13.3"
   },
   "dependencies": {}
 }
