--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Football teams app:",
   "main": "app.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack --watch",
+    "start": "./node_modules/.bin/webpack-dev-server",
     "test": "./node_modules/mocha/bin/mocha ./test/"
   },
   "repository": {
@@ -20,13 +20,20 @@
   "devDependencies": {
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "mocha": "^3.1.2",
-    "webpack": "^1.13.3"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-runtime": "^6.18.0"
+  }
 }
