--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
+    "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.24.1",
     "mocha": "^3.1.2",
     "style-loader": "^0.13.1",
