--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Football teams app:",
   "main": "app.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server",
-    "test": "./node_modules/mocha/bin/mocha ./test/", 
-    "webpack": "./node_modules/.bin/webpack"
+    "start": "webpack-dev-server",
+    "test": "./node_modules/mocha/bin/mocha ./test/",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
     "html-webpack-plugin": "^2.24.1",
     "mocha": "^3.1.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
+    "webpack": "~1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
