--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "./node_modules/mocha/bin/mocha ./test/",
+    "test": "./node_modules/mocha/bin/mocha --require ignore-styles --require src/test/setup.js --compilers js:babel-core/register ./src/**/*.test.js --watch",
     "webpack": "webpack"
   },
   "repository": {
@@ -23,19 +23,24 @@
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
+    "expect": "^1.20.2",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.24.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
     "style-loader": "^0.13.1",
     "webpack": "~1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0"
+    "babel-runtime": "^6.18.0",
+    "jquery": "^3.1.1"
   }
 }
