--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "./node_modules/mocha/bin/mocha --require ignore-styles --require src/test/setup.js --compilers js:babel-core/register ./src/**/*.test.js --watch",
+    "test": "mocha --require ignore-styles --compilers js:babel-core/register \"src/*.test.js\" --watch",
     "webpack": "webpack"
   },
   "repository": {
